--- a/Web/index.html
+++ b/Web/index.html
@@ -4,6 +4,8 @@
     <title>CSV Data Display</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
   </head>
   <body>
     <h1 id="label_title"></h1>
