Added light/Dark mode button

--- a/Web/index.html
+++ b/Web/index.html
@@ -15,6 +15,7 @@
     <div id="button-group">
       <button id="previous">Previous</button>
       <button id="next">Next</button>
+      <button id="mode">Light mode</button>
     </div>
     <div class="jump-group">
     <input type="text" id="jumpToLine" placeholder="Jump to line...">
