Added light mode function call to HTML file

--- a/Web/index.html
+++ b/Web/index.html
@@ -22,5 +22,8 @@
       <button id="goToLine">Go to line</button>
     </div>
     <script src="script.js"></script>
+    <script>
+      lightMode();
+    </script>
   </body>
 </html>
