Reverted previous change

--- a/Web/index.html
+++ b/Web/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <button id="mode">Light mode</button>
     <title>CSV Data Display</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +15,7 @@
     <div id="button-group">
       <button id="previous">Previous</button>
       <button id="next">Next</button>
+      <button id="mode">Light Mode</button>
     </div>
     <div class="jump-group">
     <input type="text" id="jumpToLine" placeholder="Jump to line...">
