Updated tags to use Sematic elem,ents

--- a/Web/index.html
+++ b/Web/index.html
@@ -12,15 +12,15 @@
     <p id="label_description"></p>
     <p id="label_line"></p>
     <img id="label_image" src="" alt="Image">
-    <div id="button-group">
+    <nav id="button-group">
       <button id="previous">Previous</button>
       <button id="next">Next</button>
       <button id="mode">Light Mode</button>
-    </div>
-    <div class="jump-group">
-    <input type="text" id="jumpToLine" placeholder="Jump to line...">
+    </nav>
+    <section class="jump-group">
+      <input type="text" id="jumpToLine" placeholder="Jump to line...">
       <button id="goToLine">Go to line</button>
-    </div>
+    </section>
     <script src="script.js"></script>
     <script>
       lightMode();
