Added a class to make precise editing easier

--- a/Web/index.html
+++ b/Web/index.html
@@ -19,7 +19,9 @@
     </nav>
     <section class="jump-group">
       <input type="text" id="jumpToLine" placeholder="Jump to line...">
-      <button id="goToLine">Go to line</button>
+      <div class="go-to-line">
+        <button id="goToLine">Go to line</button>
+      </div>
     </section>
     <script src="script.js"></script>
     <script>
