Makes the light/dark mode in a static place

--- a/Web/index.html
+++ b/Web/index.html
@@ -8,6 +8,9 @@
 
   </head>
   <body>
+    <div id="light-mode-position">
+      <button id="mode">Light Mode</button>
+    </div>
     <h1 id="label_title"></h1>
     <p id="label_description"></p>
     <p id="label_line"></p>
@@ -15,7 +18,6 @@
     <nav id="button-group">
       <button id="previous">Previous</button>
       <button id="next">Next</button>
-      <button id="mode">Light Mode</button>
     </nav>
     <section class="jump-group">
       <input type="text" id="jumpToLine" placeholder="Jump to line...">
