Added a Quiz Portion (Currently the Place holder for it)

--- a/Web/index.html
+++ b/Web/index.html
@@ -25,6 +25,20 @@
         <button id="goToLine">Go to line</button>
       </div>
     </section>
+    <div id="Quiz">
+    <h1>Museum Quiz</h1>
+	  <p>Test Your Knowledge:</p>
+	    <form>
+		    <div>
+			    <label>Sample Question</label>
+            <br>
+			      <input type="radio" name="q1" value="a"> a) placeholder<br>
+			      <input type="radio" name="q1" value="b"> b) placeholder<br>
+			      <input type="radio" name="q1" value="c"> c) placeholder<br>
+			      <input type="radio" name="q1" value="d"> d) placeholder<br>
+		    </div>
+        <button type="button" >Submit Answer</button>
+      </div>
     <script src="script.js"></script>
     <script>
       lightMode();
