Added span tags for easier modifications

--- a/Web/index.html
+++ b/Web/index.html
@@ -32,10 +32,10 @@
 		    <div>
 			    <label>Sample Question</label>
             <br>
-			      <input type="radio" name="q1" value="a"> a) Choice A<br>
-            <input type="radio" name="q1" value="b"> b) Choice B<br>
-            <input type="radio" name="q1" value="c"> c) Choice C<br>
-            <input type="radio" name="q1" value="d"> d) Choice D<br>
+			      <input type="radio" name="q1" value="a"> <span>a) Choice A</span><br>
+            <input type="radio" name="q1" value="b"> <span>b) Choice B</span><br>
+            <input type="radio" name="q1" value="c"> <span>c) Choice C</span><br>
+            <input type="radio" name="q1" value="d"> <span>d) Choice D</span><br>
 		    </div>
           <button type="button" id="submitAnswer">Submit Answer</button>
     </form>
