Added accessibility button

--- a/Web/index.html
+++ b/Web/index.html
@@ -44,6 +44,12 @@
     <script src="script.js"></script>
     <script>
       lightMode();
-    </script>
+    
+  <button id="accessibility-button" aria-label="Accessibility Menu" title="Accessibility Menu">
+  <span class="sr-only">Accessibility Menu</span>
+  <span class="icon"></span>
+	    </script>
+</button>
+
   </body>
 </html>
