Changed code to prevent further light mode breakage

--- a/Web/index.html
+++ b/Web/index.html
@@ -42,9 +42,9 @@
     <p id="quizResult"></p>
       </div>
     <script src="script.js"></script>
-    <script>
-      lightMode();
-    </script>
+    
+    <script>lightMode();</script>
+   
   <button id="accessibility-button" aria-label="Accessibility Menu" title="Accessibility Menu">
   <span class="sr-only">Accessibility Menu</span>
   <span class="icon"></span>
