Added new pages and CSS
Added directions page and contact page, also created the nav bar for them and the CSS for it

--- a/Web/index.html
+++ b/Web/index.html
@@ -8,6 +8,13 @@
 
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home Page</a></li>
+        <li><a href="directions.html">Directions</a></li>
+        <li><a href="contact.html">Contact Page</a></li>
+      </ul>
+    </nav>
     <div id="light-mode-position">
       <button id="mode">Light Mode</button>
     </div>
