Added content to Contact page and its CSS

--- a/Web/contact.html
+++ b/Web/contact.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Contact Page</title>
+<head>
+    <title>Contact Information</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home Page</a></li>
-        <li><a href="directions.html">Directions</a></li>
-        <li><a href="contact.html">Contact Page</a></li>
-      </ul>
+</head>
+<body>
+    <nav class="top-nav">
+        <ul>
+            <li><a href="index.html">Home Page</a></li>
+            <li><a href="directions.html">Directions</a></li>
+            <li><a href="contact.html">Contact Page</a></li>
+        </ul>
     </nav>
-  </body>
+    <main>
+        <h1>Contact Information</h1>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Student Number</th>
+            </tr>
+            <tr>
+                <td>Eduardo Saldana</td>
+                <td>es18za@brocku.ca</td>
+                <td>6612626</td>
+            </tr>
+            <tr>
+                <td>Alex Duclos</td>
+                <td>ad19ua@brocku.ca</td>
+                <td>6738884</td>
+            </tr>
+            <tr>
+                <td>Goktug Cirag</td>
+                <td>gc19cy@brocku.ca</td>
+                <td>6776678</td>
+            </tr>
+            <tr>
+                <td>Jashan Pannu</td>
+                <td>jp18jj@brocku.ca</td>
+                <td>6505861</td>
+            </tr>
+            <tr>
+                <td>Rishabh Rai</td>
+                <td>rr19pa@brocku.ca</td>
+                <td>6847156</td>
+            </tr>
+        </table>
+    </main>
+</body>
 </html>
