Changed options in accessibility menu

--- a/Web/index.html
+++ b/Web/index.html
@@ -58,9 +58,8 @@
         <span class="icon"></span>
         <div id="accessibility-menu">
           <ul>
-            <li><a href="#">Option 1</a></li>
-            <li><a href="#">Option 2</a></li>
-            <li><a href="#">Option 3</a></li>
+            <li><a href="#" onclick="increaseFontSize()">Increase font size</a></li>
+            <li><a href="#" onclick="decreaseFontSize()">Decrease font size</a></li>
           </ul>
         </div>
       </button>
