Updated Direction page and its CSS

--- a/Web/directions.html
+++ b/Web/directions.html
@@ -1,21 +1,80 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Directions - Niagara on the Lake Museum</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home Page</a></li>
-        <li><a href="directions.html">Directions</a></li>
-        <li><a href="contact.html">Contact Page</a></li>
-      </ul>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Directions to Niagara on the Lake Museum</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav class="top-nav">
+        <ul>
+            <li><a href="index.html">Home Page</a></li>
+            <li><a href="directions.html">Directions</a></li>
+            <li><a href="contact.html">Contact Page</a></li>
+        </ul>
     </nav>
-    <div id="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11830.728389035903!2d-79.06703697709674!3d43.25445519033705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d34b1786bfaa6d%3A0x4ee4f4f4f68c9b4d!2sNiagara-on-the-Lake%20Museum!5e0!3m2!1sen!2s!4v1645733774145!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-  </body>
+  </header>
+  <main class="directions-page">
+    <h1>Contact Information</h1>
+    <section>
+      <h2>About the Museum</h2>
+      <p>
+        The Niagara on the Lake Museum is located in the heart of the historic town of Niagara-on-the-Lake. The museum features exhibits showcasing the rich history and culture of the region. It is surrounded by beautiful parks, historic buildings, and charming shops and restaurants.
+      </p>
+    </section>
+    <section>
+      <h2>Location</h2>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2905.04995007002!2d-79.0696876845077!3d43.25540747913651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d34ed3b3d4b4e1%3A0x4cddb4ab7a1c282!2sNiagara-on-the-Lake%20Museum!5e0!3m2!1sen!2sca!4v1637029041010!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </section>
+    <section>
+      <h2>Photos</h2>
+      <div class="photo-gallery">
+        <img src="images\exterior.jpg" alt="Niagara on the Lake Museum exterior">
+        <img src="images\interior.jpg" alt="Niagara on the Lake Museum entrance">
+        <img src="images\park.jpg" alt="Nearby park">
+      </div>
+    </section>
+    <section>
+      <h2>Transportation Options</h2>
+      <ul>
+        <li><strong>Public Transit:</strong> The Niagara-on-the-Lake Transit provides bus services in the area, with stops near the museum.</li>
+        <li><strong>Parking:</strong> Paid parking is available at nearby lots and on-street parking is available in the vicinity of the museum.</li>
+        <li><strong>Walking or Biking:</strong> The museum is easily accessible by walking or biking from other points of interest in the town.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Accessibility Information</h2>
+      <p>
+        The museum is wheelchair accessible, with ramps and elevators available. Accessible restrooms are also provided on site. If you require further assistance or have questions about accessibility, please contact the museum directly.
+      </p>
+    </section>
+    <section>
+      <h2>Hours of Operation and Contact Information</h2>
+      <p>
+        <strong>Hours of Operation:</strong> Monday - Sunday: 10:00 AM - 5:00 PM
+</p>
+<p>
+<strong>Phone:</strong> (905) 468-3266
+</p>
+<p>
+<strong>Email:</strong> webinquiry@notl.org
+</p>
+<p>
+<strong>Address:</strong> Town hall Niagara-on-the-Lake 1593 Four Mile Creek Road, P.O. Box 100 Virgil, ON, L0S 1T0 Canada
+</p>
+</section>
+
+  
+  <footer>
+    <p>&copy; 2021 Niagara on the Lake Museum</p>
+  </footer>
+</main>
+  <script>
+    // Add JavaScript code here
+  </script>
+</body>
 </html>
