Makes accessibility menu not visible until button clicked

--- a/Web/index.html
+++ b/Web/index.html
@@ -48,7 +48,7 @@
       </div>
     <script src="script.js"></script>
     
-    
+    <script>toggleAccessibilityMenu();</script>
 
     <div onclick="toggleAccessibilityMenu()">
       <button id="accessibility-button" aria-label="Accessibility Menu" title="Accessibility Menu">
