update accessibility menu

--- a/Web/index.html
+++ b/Web/index.html
@@ -49,7 +49,7 @@
     <script src="script.js"></script>
     
     <script>toggleAccessibilityMenu();</script>
-
+    <script> window.interdeal = { "sitekey": "01c750b7cd08e27020c89beb6ee46175", "Position": "Left", "Menulang": "EN", "domains": { "js": "https://cdn.equalweb.com/", "acc": "https://access.equalweb.com/" }, "btnStyle": { "vPosition": [ "80%", null ], "scale": [ "0.8", "0.8" ], "color": { "main": "#0a51f2", "second": "" }, "icon": { "type": 7, "shape": "semicircle", "outline": false } } }; (function(doc, head, body){ var coreCall = doc.createElement('script'); coreCall.src = interdeal.domains.js + 'core/4.4.2/accessibility.js'; coreCall.defer = true; coreCall.integrity = 'sha512-A9+ASEqwwTHkr8277jm4B3aoLL+QbUDSfgKqA6M7tWbu/Vlde4BsHZuFx8YFnSPdbVa6RJsb8xQ4+apAk2lkww=='; coreCall.crossOrigin = 'anonymous'; coreCall.setAttribute('data-cfasync', true ); body? body.appendChild(coreCall) : head.appendChild(coreCall); })(document, document.head, document.body); </script>
     <div onclick="toggleAccessibilityMenu()">
       <button id="accessibility-button" aria-label="Accessibility Menu" title="Accessibility Menu">
         <span class="sr-only">Accessibility Menu</span>
