Better accessibility menu
Changed the text to not be hyperlinks. Changed the whole menu's look to accomadate this difference. Made it so the accessibility options are activated by clicking the whole button rather than just the text

--- a/Web/index.html
+++ b/Web/index.html
@@ -56,9 +56,9 @@
         <span class="icon"></span>
         <div id="accessibility-menu">
           <ul>
-            <li><a href="#" onclick="increaseFontSize()">Increase font size</a></li>
-            <li><a href="#" onclick="decreaseFontSize()">Decrease font size</a></li>
-            <li><a href="#" onclick="lightMode()">Light Mode</a></li>
+            <li onclick="increaseFontSize()"><a>Increase font size</a></li>
+            <li onclick="decreaseFontSize()"><a>Decrease font size</a></li>
+            <li onclick="lightMode()"><a>Light Mode</a></li>
           </ul>
         </div>
       </button>
